--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
             },
             boxShadow: {
               'slack': '0 0 0 1px rgba(0,0,0,0.06), 0 2px 8px rgba(0,0,0,0.08)',
+              'glow': '0 0 20px rgba(74, 21, 75, 0.15)',
+            },
+            animation: {
+              'scroll': 'scroll 40s linear infinite',
+              'float': 'float 6s ease-in-out infinite',
+              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            },
+            keyframes: {
+              scroll: {
+                '0%': { transform: 'translateX(0)' },
+                '100%': { transform: 'translateX(-100%)' },
+              },
+              float: {
+                '0%': { transform: 'translateY(0px)' },
+                '50%': { transform: 'translateY(-10px)' },
+                '100%': { transform: 'translateY(0px)' },
+              }
             }
           },
         },
@@ -44,13 +61,13 @@
       body {
         font-family: 'Lato', sans-serif;
       }
-      .animate-float {
-        animation: float 6s ease-in-out infinite;
+      /* Hide scrollbar for marquee containers */
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
       }
-      @keyframes float {
-        0% { transform: translateY(0px); }
-        50% { transform: translateY(-10px); }
-        100% { transform: translateY(0px); }
+      .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
     </style>
   <script type="importmap">
