--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             },
             animation: {
               'scroll': 'scroll 40s linear infinite',
+              'scroll-y': 'scrollY 20s linear infinite',
               'float': 'float 6s ease-in-out infinite',
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
@@ -42,6 +43,10 @@
               scroll: {
                 '0%': { transform: 'translateX(0)' },
                 '100%': { transform: 'translateX(-100%)' },
+              },
+              scrollY: {
+                '0%': { transform: 'translateY(0)' },
+                '100%': { transform: 'translateY(-50%)' },
               },
               float: {
                 '0%': { transform: 'translateY(0px)' },
